--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -22,34 +22,30 @@
     </ul>
     {% endif %}
     <form action="" method="post">{% csrf_token %}
-    
+    <input class="form-field-regular" type="text" id="id_email" name="email" placeholder=" EMAIL " maxlength="100" size="20" value="{{ email }}"/>
     {% if errors %}
         {% for e in errors %}
             {% if forloop.counter0 == 0 %}
                 {% if e %}
-                <input class="form-field-regular" type="text" id="id_email" name="email" placeholder=" EMAIL " maxlength="100" size="20" value="{{ email }}"/>
-                <br>
                 {% else %}
-                <input class="form-field-regular" type="text" id="id_email" name="email" placeholder=" EMAIL " maxlength="100" size="20" value="{{ email }}"/>&emsp;INVALID EMAIL
-                <br>
-                {% endif %}
-            {% endif %}  
-            
-            {% if forloop.counter0 == 1 %}
-                {% if e %}
-                <input class="form-field-regular" type="password"  id="id_password" name="password" placeholder=" PASSWORD " maxlength="30" size="20" value="{{ password }}"/>
-                <br>
-                {% else %}
-                <input class="form-field-regular" type="password"  id="id_password" name="password" placeholder=" PASSWORD " maxlength="30" size="20" value="{{ password }}"/>&emsp;INVALID PASSWORD
-                <br>
+                <span class="form-prompt">* Invalid email</span>
                 {% endif %}
             {% endif %}
         {% endfor %}
     {% else %}
-    <input class="form-field-regular" type="text" id="id_email" name="email" placeholder=" EMAIL " maxlength="100" size="20" />
+    {% endif %}
     <br>
     <input class="form-field-regular" type="password" id="id_password" name="password" placeholder=" PASSWORD " maxlength="30" size="20" />
-    <br>
+    {% if errors %}
+        {% for e in errors %}            
+            {% if forloop.counter0 == 1 %}
+                {% if e %}
+                {% else %}
+                <span class="form-prompt">* Invalid password</span>
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+    {% else %}
     {% endif %}
     <input class="form-button-regular" type="submit" value="Login"/>
     </form>
