--- a/media/static/style.css
+++ b/media/static/style.css
@@ -404,7 +404,13 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
   margin: 0 0 20px;
   text-transform: uppercase;
 }
-
+.page-hero-inline {
+  display: inline;
+}
+.page-hero-support {
+  display: inline;
+  font-size: 18px;
+}
 
 /* Entry item related */
 /* This defines the block properties of main-item. */
@@ -507,7 +513,12 @@ h1.entry-title {
 }
 .layout-profile-list:last-child {
 }
-
+.profile-more-link {
+  font-size: 18px;
+  font-weight: 900;
+  text-align: right;
+  text-transform: uppercase;
+}
 .entry-interaction-header,
 .profile-content-header {
   font-weight: 900;
