hide search order selector

--- a/templates/event/event_search_results.html
+++ b/templates/event/event_search_results.html
@@ -9,7 +9,7 @@
 <form style="margin: 10px;" role="search" method="get" id="searchform_test" action="/events/search">
 
     <input id="searchform-text" type="text" value="" name="query" id="query" />
-    <select id = "sorted_method_id" name="sorted_method">
+    <select style="display:none;" id = "sorted_method_id" name="sorted_method">
     <option value="desc">Descending Order</option>
     <option value="asc">Ascending Order</option>
     <option value="alphabet">Alphabetical Order</option>
