--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
         
         <form role="search" method="get" id="searchform" action="/events/search">
           <input id="searchform-text" type="text" value="{{request.session.query_session}}" name="query" id="query" />
-		<select id = "sorted_method_id" name="sorted_method">
+		<select id = "sorted_method_id" name="sorted_method" style="display:none;">
   			<option value="desc">Descending Order</option>
   			<option value="asc">Ascending Order</option>
   			<option value="alphabet">Alphabetical Order</option>
