Added public profile not finished, bug

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -70,7 +70,7 @@
             <a href="">See more</a>
         </div>
         {% else %}
-            {{ up.firstname}} currently does not have any liked events.
+            {{ up.firstname}} currently does not have any saved events.
         {% endif %}
     </div>
 </div><!-- .layout-profile-content layout-profile-list -->
