--- a/templates/accounts/public_profile.html
+++ b/templates/accounts/public_profile.html
@@ -1,137 +1,125 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="layout-content-wrap">
 
 {%if request.user.is_authenticated %}
 
 
 
-<div class="layout-profile-content">
-    <div class="profile-hero clearfix-modern">    
-    <div class="profile-image">
+<div class="layout-content-header">
+    <h1 class="page-hero-text page-hero-inline">{{ user.firstname }} {{ user.lastname }}</h1>
+    {% if isAlreadyFollowed %}
+    <a  class="page-hero-support form-button-mini"
+    href="{% url unfriend user.id %}" style="color: white;">Unfollow</a>
+    {% else %}
+    <a class="page-hero-support form-button-mini"
+     href="{% url friend user.id %}" style="color: white;">Follow</a>
+    {% endif %}
+    </span>    
+</div>
+
+<div class="layout-profile-content clearfix-modern">
+    <div class="profile-image main-item-block">
         <img class="user-avatar-major" src="/webhost_media/{{ user.avatar }}"/>
     </div>
     
-    <div class="profile-content">
-        <h1 class="profile-name page-hero-text">
-            {{ user.firstname }}&nbsp;{{ user.lastname }}
-		 <span class="roboto-font">
-		  {% if isAlreadyFollowed %}
-		  <a href="{% url unfriend user.id %}" style="color: white;">Unfollow</a>
- 		  {% else %}
-		  <a href="{% url friend user.id %}" style="color: white;">Follow</a>
-  		  {% endif %}
-		  </span>
-
-        </h1>
-
+    <div class="profile-content main-item-block">
         <div class="profile-metadata">
-            <span class="roboto-font">
-            &raquo;&nbsp;Status: {{ user.position }}&emsp;
-            &raquo;&nbsp;Location: {{ user.location }}&emsp;
-            &raquo;&nbsp;Interest: {{ user.interest }}&emsp;
-            </span>
-            <p class="profile-bio"><strong>Bio:</strong> {{ user.bio }}</p>
-        
-        </div><!-- .profile-metadata -->
-    </div><!-- .profile-content -->    
-    </div><!-- .profile-hero -->        
-</div><!-- .layout-profile-content -->
-
-
-
-<div class="layout-profile-content">
-    <div class="profile-content-header">
-        <div class="profile-header">
-        {{ user.django_user.username }} is following {{ friends|length }} users
-        </div>
-    </div><!-- .profile-content-header -->
-    <div class="profile-friends clearfix-modern">
-        <h3>
-	        {% for f in friends %}
-	        <div class="user-friend-link" >
-	        <a href="/user/{{ f.friend_to.id }}"
-	        title="Go to {{ f.friend_to.django_user.username }}'s Profile">
-	        <img class="user-avatar-mini" 
-	        src="/webhost_media/{{ f.friend_to.avatar }} "/>
-            </a>
-            </div><!-- .user-friend-link -->
-            {% endfor %}
-        </h3>
-    </div><!-- .profile-friends -->
-</div><!-- .layout-profile-content -->
-
-
-
-<div class="layout-profile-content layout-profile-list">
-    <div class="profile-content-header">
-        <div class="profile-header">
-        Events saved by {{ user.django_user.username }}
-        </div>
-    </div><!-- .profile-content-header -->
-    <div class="profile-list-event">
-        {% for e in saved_events %}
-        
-        <div class="profile-event-unit clearfix-modern">
-            <div class="profile-event-metadata">
-            <h3 class="event-unit-title">
-                <a href="{%url event.views.single e.event.id %}">{{ e.event.title }}</a>
+            <h3 class="profile-type">
+                {% if user.affiliation_type == 0 %}
+                    Student
+                {% endif %}
+                {% if user.affiliation_type == 1 %}
+                    Staff
+                {% endif %}
+                {% if user.affiliation_type == 2 %}
+                    Faculty
+                {% endif %}
             </h3>
-            <h4 class="event-unit-time roboto-font"><strong>When:</strong> {{ e.event.event_time }}</h4>
-            <h4 class="event-unit-loc roboto-font"><strong>Where:</strong> {{ e.event.location }}</h4>
-            </div><!-- .profile-event-metadata -->
-            <div class="profile-event-image">
-            <a href="{%url event.views.single e.event.id %}">
-            <img class="event-avatar-mini" src="/webhost_media/{{ e.event.image1 }}"/>
+            <h3 class="profile-major">{{ user.major }}</h3>
+            <h3 class="profile-grad">Class of {{ user.graduation_year }}</h3>
+            
+            <a href="">
+            <div class="form-button-mini profile-following-button">
+                Following {{ friends_num }} friends
+            </div>
             </a>
-            </div><!-- .profile-event-image -->
-        </div><!-- .profile-event-unit -->
-        
-        {% endfor %}
-    </div>
-</div><!-- .layout-profile-content layout-profile-list -->
+            <h3 class="profile-bio"><!--<strong>Bio:</strong>--> {{ user.bio }}</h3>
+        </div><!-- .profile-metadata -->
+    </div><!-- .profile-content -->      
+</div><!-- .layout-profile-content -->
 
 
 <div class="layout-profile-content layout-profile-list">
     <div class="profile-content-header">
         <div class="profile-header">
-        Events of {{ user.django_user.username }}'s friends
+        {{ user.firstname }}'s saved events
         </div>
     </div><!-- .profile-content-header -->
     <div class="profile-list-event">
-        {% for e in friends_saved_entries %}
-        
+        {% if saved_events %}
+        {% for e in saved_events %}
         <div class="profile-event-unit clearfix-modern">
-            <div class="profile-event-metadata">
-            <h3 class="event-unit-title">
-                <a href="{%url event.views.single e.id %}">{{ e.event.title }}</a>
-            </h3>            
-            <h4 class="event-unit-time roboto-font"><strong>When:</strong> {{ e.event.event_time }}</h4>
-            <h4 class="event-unit-loc roboto-font"><strong>Where:</strong> {{ e.event.location }}</h4>
-	        <div class="user-friend-link" >
-	        <a href="/user/{{ e.user.id }}"
-	        title="Go to {{ e.user.django_user.username }}'s Profile">
-	        <img class="user-avatar-mini" 
-	        src="/webhost_media/{{ e.user.avatar }} "/>
-            </a>
-            </div><!-- .user-friend-link -->
-            </div><!-- .profile-event-metadata -->
             <div class="profile-event-image">
-            <a href="{%url event.views.single e.id %}">
-            <img class="event-avatar-mini" src="/webhost_media/{{ e.event.image1 }}"/>
-            </a>
+                <a href="{%url event.views.single e.event.id %}">
+                <img class="event-avatar-mini" src="/webhost_media/{{ e.event.image1 }}"/>
+                </a>
             </div><!-- .profile-event-image -->
+            <div class="profile-event-metadata">
+                <h3 class="event-unit-title">
+                    <a href="{%url event.views.single e.event.id %}">{{ e.event.title }}</a>
+                </h3>
+                <h4 class="event-unit-time roboto-font">{{ e.event.event_time }}</h4>
+                <h4 class="event-unit-loc roboto-font">{{ e.event.location }}</h4>
+		        <a href="{% url event.views.unlike_event e.event.id %}">Unsave this event</a>
+            </div><!-- .profile-event-metadata -->
         </div><!-- .profile-event-unit -->
-        
         {% endfor %}
+        <div class="profile-more-link">
+            <a href="">See more</a>
+        </div>
+        {% else %}
+            {{ user.firstname }} currently does not have any saved events.
+        {% endif %}
     </div>
 </div><!-- .layout-profile-content layout-profile-list -->
 
 
 
+<div class="layout-profile-content layout-profile-list">
+    <div class="profile-content-header">
+        <div class="profile-header">
+        {{ user.firstname }}'s friends' events
+        </div>
+    </div><!-- .profile-content-header -->
+    <div class="profile-list-event">
+        {% if friends_saved_entries %}
+        {% for e in friends_saved_entries %}
+        <div class="profile-event-unit clearfix-modern">
+            <div class="profile-event-image">
+                <a href="{%url event.views.single e.event.id %}">
+                <img class="event-avatar-mini" src="/webhost_media/{{ e.event.image1 }}"/>
+                </a>
+            </div><!-- .profile-event-image -->
+            <div class="profile-event-metadata">
+                <h3 class="event-unit-title">
+                    <a href="{%url event.views.single e.event.id %}">{{ e.event.title }}</a>
+                </h3>
+                <h4 class="event-unit-time roboto-font">{{ e.event.event_time }}</h4>
+                <h4 class="event-unit-loc roboto-font">{{ e.event.location }}</h4>
+		        <a href="{% url event.views.unlike_event e.event.id %}">Unsave this event</a>
+            </div><!-- .profile-event-metadata -->
+        </div><!-- .profile-event-unit -->
+        {% endfor %}
+        <div class="profile-more-link">
+            <a href="">See more</a>
+        </div>
+        {% else %}
+            {{ user.firstname }} currently does not have any friends.
+        {% endif %}
+    </div>
+</div><!-- .layout-profile-content layout-profile-list -->
 
 {% endif %}
     
-</div><!-- .layout-content-wrap -->
 {% endblock %}
