--- a/templates/event/event_post.html
+++ b/templates/event/event_post.html
@@ -9,36 +9,28 @@
 
 <form class="form-search" action="" enctype="multipart/form-data" method="post">{% csrf_token %}
 
-<div class="page-subhero-text">Upload your image</div>
+<div class="main-item-block">
 	<div id="preview">
-         <img id="imghead"  src=''>
+         <img id="imghead" src=''>
 	</div>
-      
 	 <div style="position:relative;">
-		<button id="browzer_button" style="position:absolute; margin-left:30px;width:150px;"/> Browzer </button>
-		<input type="file" name="picture" style="opacity:0; z-index:1;" onchange="document.getElementById('browzer_button').value = this.value;previewImage(this);" />
+		<button id="browzer_button" 
+		style="position:absolute; margin-left:30px; width:150px;"/>Upload poster</button>
+		<input type="file" name="picture" style="opacity:0; z-index:1;"
+		 onchange="document.getElementById('browzer_button').value = 
+		 this.value;previewImage(this);" />
 	 </div>
-<br><br>
+</div>
 
-<div class="page-subhero-text">Add any additional info</div>
+<div class="entry-content-block">
+<input class="form-field-regular" type = "text" name="title" placeholder="EVENT TITLE"/><br> 
+<input class="form-field-regular" type = "text" name="refer" placeholder="EVENT URL"/><br>
+<input class="form-field-regular" type = "text" name="date"  placeholder="EVENT DATE yyyy-mm-dd"/><br>
+<input class="form-field-regular" type = "text" name="loc" placeholder="EVENT LOCATION"/><br>
+<textarea class="form-textarea-regular" type = "text" name="body" row="5" placeholder="EVENT DETAIL"></textarea><br>
+<input class="form-field-regular" type = "text" name="tags"  placeholder="TAGS / CATEGORIES"/><br>
 
-EVENT TITLE <br>
-<input type = "text" name="title"/><br> 
-EVENT URL <br>
-<input type = "text" name="refer"/><br>
-EVENT DATE <br>
-<input type = "text" name="date" placeholder="yyyy-mm-dd"/><br>
-EVENT LOCATION <br>
-<input type = "text" name="loc"/><br>
-EVENT DETAIL <br>
-<textarea type = "text" name="body"></textarea><br>
-TAGS / CATEGORIES <br>
-<input type = "text" name="tags"/><br>
-
-<br>
-<div class="page-subhero-text">Submit for authorization</div>
-
-<input type="submit" value="Submit" />
+<input class="form-button-regular" type="submit" value="Submit for approval" />
 </form>
 <br>
 <br>
