Added space for headers

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -6,6 +6,7 @@
 
 <div class="layout-content-header">
     <h1 class="page-hero-text page-hero-inline">Hi, {{ up.firstname }} {{ up.lastname }}</h1>
+    &emsp;
     <a class="page-hero-support form-button-mini" href="{% url accounts.views.edit_profile %}">Edit Profile</a>
 </div>
 
