Fixed mgmt overview frontend

--- a/templates/mgmt/overview.html
+++ b/templates/mgmt/overview.html
@@ -45,7 +45,7 @@
 <div class="entry-content-mega-block">
     <div style="padding: 20px">
 	{% for app_event in event_list %}	
-	    <a href="{% url mgmt.views.approve_user app_user.id %}">
+	    <a href="{% url mgmt.views.approve_event app_event.id %}">
 	    <img class="user-avatar-mini" src="/webhost_media/{{ app_event.image1 }}"/>
 	    <span class="page-subhero-text"><strong> Approve </strong>
 	    {{ app_event.title }} </a>
