1. fixed following self; 2. friend'events lits error on profile page;

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -90,17 +90,17 @@
         {% for e in friends_events %}
         <div class="profile-event-unit clearfix-modern">
             <div class="profile-event-image">
-                <a href="{%url event.views.single e.event.id %}">
-                <img class="event-avatar-mini" src="/webhost_media/{{ e.event.image1 }}"/>
+                <a href="{%url event.views.single e.id %}">
+                <img class="event-avatar-mini" src="/webhost_media/{{ e.image1 }}"/>
                 </a>
             </div><!-- .profile-event-image -->
             <div class="profile-event-metadata">
                 <h3 class="event-unit-title">
-                    <a href="{%url event.views.single e.event.id %}">{{ e.event.title }}</a>
+                    <a href="{%url event.views.single e.id %}">{{ e.title }}</a>
                 </h3>
-                <h4 class="event-unit-time roboto-font">{{ e.event.event_time }}</h4>
-                <h4 class="event-unit-loc roboto-font">{{ e.event.location }}</h4>
-		        <a href="{% url event.views.unlike_event e.event.id %}">Unsave this event</a>
+                <h4 class="event-unit-time roboto-font">{{ e.event_time }}</h4>
+                <h4 class="event-unit-loc roboto-font">{{ e.location }}</h4>
+		        <a href="{% url event.views.unlike_event e.id %}">Unsave this event</a>
             </div><!-- .profile-event-metadata -->
         </div><!-- .profile-event-unit -->
         {% endfor %}
