Added save event link in homepage template

--- a/templates/event/event_homepage.html
+++ b/templates/event/event_homepage.html
@@ -14,19 +14,32 @@
 <div id="layout-posts-masonry">
 {% for event in events %}
 
+<style>
+.entry-bookmark {
+  background: url("/webhost_media/static/bm.png");
+  height: 60px;
+  margin: 0 10px;
+  position: relative;
+  width: 50px;
+  z-index: 10;
+}
+.entry-image {
+  z-index: 2;
+}
+</style>
+
 <div class="main-item-block main-item-style post-item">
-   
-    <img src="/webhost_media/{{event.image1}}" width="100%">
+    <img class="entry-image" src="/webhost_media/{{event.image1}}" width="100%">
+    <a href="{% url like_event event.id %}"><div class="entry-bookmark"></div></a>
     <header class="entry-header">
         <h1 class="entry-title">
-            <a href="{%url single event.id %}">{{ event.title }}</a>
+            <a href="{% url single event.id %}">{{ event.title }}</a>
         </h1>
         <h3 class="main-item-meta roboto-font">
             {{ event.event_time|date:"Y-m-d" }}<br>
             {{ event.location }}
         </h3>
     </header>
-
 </div>
 
 {% endfor %}
