--- a/templates/event/event_search_results.html
+++ b/templates/event/event_search_results.html
@@ -31,8 +31,11 @@
 <div id="layout-posts-masonry">
 {% for event in events_found %}
     <div class="main-item-block main-item-style post-item">
-       
-        <img src="/webhost_media/{{event.image1}}" width="100%">
+            
+        <img class="entry-image" src="/webhost_media/{{event.image1}}" width="100%">
+        <a href="{% url like_event event.id %}" title="Click to save this event for later">
+            <div class="entry-bookmark"></div>
+        </a>
         <header class="entry-header">
             <h1 class="entry-title">
                 <a href="{%url single event.id %}">{{ event.title }}</a>
