Added event bookmarking to all event associated pages

--- a/templates/event/tag_single.html
+++ b/templates/event/tag_single.html
@@ -9,9 +9,10 @@
 {% for event in events %}
 
 <div class="main-item-block main-item-style post-item">
-   
-    <img src="/webhost_media/{{event.image1}}" width="100%">
-    
+    <img class="entry-image" src="/webhost_media/{{event.image1}}" width="100%">
+    <a href="{% url like_event event.id %}" title="Click to save this event for later">
+        <div class="entry-bookmark"></div>
+    </a>
     <header class="entry-header">
          
         <h1 class="entry-title">
