Fixed image preloader, added styles

--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -13,14 +13,14 @@
 
 
 <div class="main-item-block">
-	<div id="preview">
+	<div id="preview" style="width:250px;height:250px;">
          <img id="imghead" src=''>
 	</div>
 	 <div style="position:relative;">
-		<button id="browzer_button" 
+		<button id="browser_button" 
 		style="position:absolute; margin-left:30px; width:150px;"/>Upload avatar</button>
 		<input type="file" name="picture" style="opacity:0; z-index:1;"
-		 onchange="document.getElementById('browzer_button').value = 
+		 onchange="document.getElementById('browser_button').value = 
 		 this.value;previewImage(this);" />
 	 </div>
 </div>
