date picker and date format on frontend

--- a/templates/event/event_post.html
+++ b/templates/event/event_post.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<!--JQuery DatePicker css and js starts-->
+
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+  
+  
+  <script>
+  $(function() {
+    $( "#datepicker" ).datepicker();
+  });
+  </script>
+<!--JQuery DatePicker css and js ends-->
+
+
+
 <div class="layout-content-wrap">
 
 <div class="layout-content-header">
@@ -26,7 +43,7 @@
 <div class="entry-content-block">
 <input class="form-field-regular" type = "text" name="title" placeholder="EVENT TITLE"/><br> 
 <input class="form-field-regular" type = "text" name="refer" placeholder="EVENT URL"/><br>
-<input class="form-field-regular" type = "text" name="date"  placeholder="EVENT DATE yyyy-mm-dd"/><br>
+<input class="form-field-regular" type = "text" name="date"  placeholder="EVENT DATE mm/dd/yyyy" id = "datepicker"/><br>
 <input class="form-field-regular" type = "text" name="loc" placeholder="EVENT LOCATION"/><br>
 <textarea class="form-textarea-regular" type = "text" name="body" row="5" placeholder="EVENT DETAIL"></textarea><br>
 
